fix:正在使用的角色无法删除